Additional IE10 z-index fixes

--- a/Survey/source/styles/m-question-cover.scss
+++ b/Survey/source/styles/m-question-cover.scss
@@ -40,5 +40,5 @@
     transition: opacity 1s 0ms, z-index 0ms 1s;
     opacity: 0;
     pointer-events: none;
-    z-index: 1;
+    z-index: -999;
 }
